--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   supabase_flutter: ^2.5.4
   http: ^1.2.1
   shared_preferences: ^2.2.3
+  connectivity_plus: ^6.0.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
